# portaudio

./: LICENSE  portaudio.cabal
Sound/: PortAudio.hsc
examples/: Play.hs
